# DoomLikeEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  DoomCopy.sln
DoomCopy/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Component.h  D2Renderer.cpp  D2Renderer.h  DoomCopy.aps  DoomCopy.cpp  DoomCopy.h  DoomCopy.rc  DoomCopy.vcxproj  DoomCopy.vcxproj.filters  FileManager.cpp  FileManager.h  GDIRenderer.cpp  GDIRenderer.h  Game.cpp  Game.h  GameObjects.cpp  GameObjects.h  GameTime.h  Inputs.cpp  Inputs.h  Main.cpp  Main.h  Renderer.cpp  Renderer.h  RenderingDataTypes.h  Resource.h  SDLRenderer.cpp  SDLRenderer.h  TransformComponent.cpp  TransformComponent.h  VectorMath.cpp  VectorMath.h  World.cpp  World.h  WorldDataTypes.h  framework.h  pch.h
DoomCopy/COLogger/: COLogger.lib  OutputLogger.h
DoomCopy/Dependencies/: OutputLogger.h
LevelEditor/: AboutBox1.Designer.cs  AboutBox1.cs  BSPAnalyzer.Designer.cs  BSPAnalyzer.cs  BSPBuilder.cs  CMakeLists.txt  FileManager.cs  LevelEditor.cs  LevelEditor.csproj  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  MapGrid.cs  MapGridEditor.cs  PointExtension.cs  SectorDrawer.cs  SelectionManager.cs  ToolStripNumberControl.cs
LevelEditor/Dependencies/: COLoggerImport.cs
int/DoomCopy/Debug - x64/: DoomCopy.exe.recipe  DoomCopy.res  vc143.idb
int/DoomCopy/Debug - x64/DoomCopy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DoomCopy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
